@startuml

entity Author {
    *id : VARCHAR
    --
    *name : VARCHAR
    link : VARCHAR
    bio : VARCHAR
    description : VARCHAR
    *quote_count : INT
    *slug : VARCHAR
}

entity Quote {
    *id : VARCHAR
    --
    *content : VARCHAR
    *author_id : VARCHAR
}

entity QuoteTag {
    *id : VARCHAR
    --
    *name : VARCHAR
}

Author ||--o{ Quote : Create
Quote }o--o{ QuoteTag : Has

@enduml